@@ -195,7 +195,7 @@ class ContentModelArticle extends JModelItem
 				else {
 					// If no access filter is set, the layout takes some responsibility for display of limited information.
 					$user = JFactory::getUser();
-					$groups = $user->authorisedLevels();
+					$groups = $user->getAuthorisedViewLevels();
 
 					if ($data->catid == 0 || $data->category_access === null) {
 						$data->params->set('access-view', in_array($data->access, $groups));
