@@ -84,7 +84,7 @@ class NewsfeedsModelCategory extends JModelList
 	protected function getListQuery()
 	{
 		$user	= JFactory::getUser();
-		$groups	= implode(',', $user->authorisedLevels());
+		$groups	= implode(',', $user->getAuthorisedViewLevels());
 
 		// Create a new query object.
 		$db		= $this->getDbo();
