@@ -144,7 +144,7 @@ class NewsfeedsModelNewsfeed extends JModelItem
 				else {
 					// If no access filter is set, the layout takes some responsibility for display of limited information.
 					$user = JFactory::getUser();
-					$groups = $user->authorisedLevels();
+					$groups = $user->getAuthorisedViewLevels();
 					$data->params->set('access-view', in_array($data->access, $groups) && in_array($data->category_access, $groups));
 				}
 
