@@ -56,7 +56,7 @@ class NewsfeedsViewCategory extends JView
 		}
 
 		// Check whether category access level allows access.
-		$groups	= $user->authorisedLevels();
+		$groups	= $user->getAuthorisedViewLevels();
 		if (!in_array($category->access, $groups)) {
 			return JError::raiseError(403, JText::_("JERROR_ALERTNOAUTHOR"));
 		}
