@@ -190,7 +190,7 @@ class JCategories
 		$query->where('(c.extension='.$db->Quote($extension).' OR c.extension='.$db->Quote('system').')');
 
 		if ($this->_options['access']) {
-			$query->where('c.access IN ('.implode(',', $user->authorisedLevels()).')');
+			$query->where('c.access IN ('.implode(',', $user->getAuthorisedViewLevels()).')');
 		}
 
 		if ($this->_options['published'] == 1) {
